# itunes_smartplaylist

./: .codacy.yml  .codeclimate.yml  .coveragerc  .gitignore  .travis.yml  README.md  export.py  export_xsp.py  itunes_smartplaylist.py  pyproject.toml  setup.py  test.py  xsp.py
.github/workflows/: pythonpackage.yml  pythonpublish.yml
example/: example.py
itunessmart/: __init__.py  __main__.py  data_structure.py  library.py  parse.py  xsp.py  xsp_structure.py
tests/: library_minimal.xml  library_onlysmartplaylists.xml  scramble_library.py  test_full.py  test_small.py
utils/: export.py  export_xsp.py  findSuperfluosFiles.py
